<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/background" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/action_bar" android:layout_width="match_parent" android:layout_height="56.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <FrameLayout android:id="@id/back_button" android:background="?selectableItemBackgroundBorderless" android:layout_width="56.0dp" android:layout_height="56.0dp">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back" app:tint="@color/text" />
        </FrameLayout>
        <TextView android:textSize="18.0dp" android:textColor="@color/text" android:id="@id/tvBack" android:background="?selectableItemBackgroundBorderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/advanced_setting" android:layout_toRightOf="@id/back_button" android:layout_centerVertical="true" />
    </RelativeLayout>
    <FrameLayout android:id="@id/ads_container" android:background="@color/background_tab" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/native_banner_height" app:layout_constraintBottom_toBottomOf="parent">
        <TextView android:textColor="@color/gnt_gray" android:layout_gravity="center" android:id="@id/tv_ad_loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading_ad" />
        <FrameLayout android:id="@id/my_template" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </FrameLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="0.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/action_bar">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16.0dp" app:cardBackgroundColor="@color/background_tab" app:cardCornerRadius="16.0dp">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:visibility="visible" style="@style/prefsContainer">
                        <ImageView android:src="@drawable/ic_night_clear" app:tint="@color/text" style="@style/prefsIcon" />
                        <LinearLayout style="@style/prefsTextContainer">
                            <TextView android:textColor="@color/text" android:text="@string/do_not_disturb" style="@style/prefsMain" />
                        </LinearLayout>
                        <ImageView android:visibility="gone" android:src="@drawable/ic_next" style="@style/iconNext" />
                        <com.github.angads25.toggle.widget.LabeledSwitch android:textSize="14.0dp" android:id="@id/switch_disturb" android:layout_width="56.0dp" android:layout_height="24.0dp" android:layout_centerHorizontal="true" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:colorBorder="@color/green" app:colorOn="@color/green" app:on="false" />
                    </LinearLayout>
                    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textColor="@color/text" android:id="@id/tvTurnOff" android:layout_marginLeft="64.0dp" android:layout_marginTop="16.0dp" android:text="@string/turn_off_in_this_time" style="@style/prefsMain" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginBottom="16.0dp" android:layout_below="@id/tvTurnOff">
                            <TextView android:textColor="@color/text" android:layout_gravity="center_vertical" android:layout_marginLeft="64.0dp" android:text="@string/from" style="@style/prefsMain" />
                            <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dp" android:layout_marginRight="12.0dp" app:cardBackgroundColor="@color/text_sub" app:cardCornerRadius="24.0dp">
                                <TextView android:textColor="@color/text" android:gravity="center" android:layout_gravity="center" android:id="@id/tvFrom" android:background="?selectableItemBackgroundBorderless" android:layout_width="90.0dp" android:layout_height="48.0dp" android:text="20:00" />
                            </androidx.cardview.widget.CardView>
                            <TextView android:textColor="@color/text" android:layout_gravity="center_vertical" android:text="@string/to" style="@style/prefsMain" />
                            <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dp" android:layout_marginRight="12.0dp" app:cardBackgroundColor="@color/text_sub" app:cardCornerRadius="24.0dp">
                                <TextView android:textColor="@color/text" android:gravity="center" android:layout_gravity="center" android:id="@id/tvTo" android:background="?selectableItemBackgroundBorderless" android:layout_width="90.0dp" android:layout_height="48.0dp" android:text="7:00" />
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginRight="16.0dp" app:cardBackgroundColor="@color/background_tab" app:cardCornerRadius="16.0dp">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:background="@color/background_tab" android:visibility="visible" style="@style/prefsContainer">
                        <ImageView android:src="@drawable/ic_battery" app:tint="@color/text" style="@style/prefsIcon" />
                        <LinearLayout style="@style/prefsTextContainer">
                            <TextView android:textColor="@color/text" android:text="@string/battery_save" style="@style/prefsMain" />
                        </LinearLayout>
                        <com.github.angads25.toggle.widget.LabeledSwitch android:textSize="14.0dp" android:id="@id/switch_battery" android:layout_width="56.0dp" android:layout_height="24.0dp" android:layout_centerHorizontal="true" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:colorBorder="@color/green" app:colorOn="@color/green" app:on="false" />
                    </LinearLayout>
                    <LinearLayout android:visibility="visible" style="@style/prefsContainer">
                        <ImageView android:visibility="invisible" android:src="@drawable/ic_incoming_call" app:tint="@color/text" style="@style/prefsIcon" />
                        <LinearLayout style="@style/prefsTextContainer">
                            <TextView android:textColor="@color/text" android:text="@string/turn_off_if_battery_below" style="@style/prefsMain" />
                        </LinearLayout>
                        <TextView android:textSize="16.0dp" android:textColor="@color/text_sub" android:id="@id/tvBatterySaver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dp" android:text="30%" />
                    </LinearLayout>
                    <SeekBar android:id="@id/sbBatterySaver" android:layout_marginLeft="48.0dp" android:layout_marginTop="8.0dp" android:layout_marginBottom="8.0dp" android:max="20" android:progressDrawable="@drawable/progress" android:thumb="@drawable/thumb" style="@style/Seekbar" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="16.0dp" android:layout_marginRight="16.0dp" app:cardBackgroundColor="@color/background_tab" app:cardCornerRadius="16.0dp">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:id="@id/card_advanced_settings" android:background="?selectableItemBackgroundBorderless" android:visibility="visible" style="@style/prefsContainer">
                        <ImageView android:src="@drawable/ic_phone" app:tint="@color/text" style="@style/prefsIcon" />
                        <LinearLayout style="@style/prefsTextContainer">
                            <TextView android:textColor="@color/text" android:text="@string/disable_when_using_phone" style="@style/prefsMain" />
                        </LinearLayout>
                        <com.github.angads25.toggle.widget.LabeledSwitch android:textSize="14.0dp" android:id="@id/switch_use_phone" android:layout_width="56.0dp" android:layout_height="24.0dp" android:layout_centerHorizontal="true" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:colorBorder="@color/green" app:colorOn="@color/green" app:on="false" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="16.0dp" android:layout_marginRight="16.0dp" android:layout_marginBottom="16.0dp" app:cardBackgroundColor="@color/background_tab" app:cardCornerRadius="16.0dp">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:background="@color/background_tab" android:visibility="visible" style="@style/prefsContainer">
                        <ImageView android:src="@drawable/ic_flash" app:tint="@color/text" style="@style/prefsIcon" />
                        <LinearLayout style="@style/prefsTextContainer">
                            <TextView android:textColor="@color/text" android:text="@string/enable_flash" style="@style/prefsMain" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:id="@id/llNormalMode" android:visibility="visible" style="@style/prefsContainer">
                        <ImageView android:id="@id/ivNormalMode" android:visibility="visible" android:src="@drawable/ic_check" style="@style/prefsIcon" />
                        <TextView android:textColor="@color/text" android:layout_marginLeft="16.0dp" android:text="@string/normal_mode" style="@style/prefsMain" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/llVibrateMode" android:visibility="visible" style="@style/prefsContainer">
                        <ImageView android:id="@id/ivVibrateMode" android:visibility="visible" android:src="@drawable/ic_check" style="@style/prefsIcon" />
                        <TextView android:textColor="@color/text" android:layout_marginLeft="16.0dp" android:text="@string/vibrate_mode" style="@style/prefsMain" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/llSilentMode" android:visibility="visible" style="@style/prefsContainer">
                        <ImageView android:id="@id/ivSilentMode" android:visibility="visible" android:src="@drawable/ic_uncheck" style="@style/prefsIcon" />
                        <TextView android:textColor="@color/text" android:layout_marginLeft="16.0dp" android:text="@string/slient_mode" style="@style/prefsMain" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
