<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/bottom_sheet_bg" android:paddingLeft="32.0dp" android:paddingTop="24.0dp" android:paddingRight="32.0dp" android:paddingBottom="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:textSize="18.0sp" android:textColor="@color/text" android:layout_width="match_parent" android:layout_height="120.0dp" android:src="@drawable/no_internet" android:text="@string/str_no_internet_notice" />
    <TextView android:textSize="18.0sp" android:textColor="@color/text" android:id="@id/tvTitle" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_no_internet_notice" />
    <TextView android:textSize="15.0sp" android:textColor="@color/text" android:gravity="center" android:id="@id/tvMes" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginBottom="16.0dp" android:text="@string/str_no_internet_notice" android:fontFamily="@font/san_bold" />
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="56.0dp" android:layout_marginTop="16.0dp" app:cardBackgroundColor="@color/green" app:cardCornerRadius="28.0dp">
        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tvPositive" android:layout_width="match_parent" android:layout_height="match_parent" android:foreground="?selectableItemBackground" android:text="@string/str_try_again" android:layout_weight="1.0" android:textAllCaps="true" android:fontFamily="@font/san_bold" />
    </androidx.cardview.widget.CardView>
    <TextView android:textSize="14.0sp" android:textColor="@color/text_sub" android:gravity="center" android:id="@id/tvSkip" android:layout_width="match_parent" android:layout_height="40.0dp" android:layout_marginTop="16.0dp" android:foreground="?selectableItemBackground" android:text="@string/skip" android:layout_weight="1.0" android:textAllCaps="true" android:fontFamily="@font/san_bold" />
</LinearLayout>
