<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:paddingBottom="16.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="280.0dp" android:layout_height="280.0dp" android:layout_centerInParent="true">
        <ImageView android:id="@id/buttonOnOff" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/power_off" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dp" android:layout_centerHorizontal="true">
        <edu.arbelkilani.compass.Compass android:layout_gravity="center_horizontal" android:id="@id/compass" android:layout_width="72.0dp" android:layout_height="72.0dp" app:border_color="@color/text" app:degree_color="@color/white" app:degree_value_color="@color/white" app:degrees_step="15" app:needle="@drawable/ic_needle_1" app:orientation_labels_color="@color/white" app:show_border="true" app:show_degree_value="false" app:show_orientation_labels="true" />
        <TextView android:textSize="10.0sp" android:textColor="@color/text" android:gravity="center" android:layout_gravity="center" android:id="@id/tvCompassValue" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dp" android:layout_marginTop="16.0dp" android:layout_marginRight="4.0dp" android:text="" android:fontFamily="@font/san_regular" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="end|bottom" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginRight="16.0dp" android:weightSum="4.0" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llShortCut" android:background="?selectableItemBackgroundBorderless" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0">
            <FrameLayout android:layout_gravity="center" android:background="@drawable/circle_bg" android:layout_width="48.0dp" android:layout_height="48.0dp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_shortcut" />
            </FrameLayout>
            <TextView android:textColor="@color/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/shortcut" android:fontFamily="@font/san_regular" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llCamera" android:background="?selectableItemBackgroundBorderless" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0">
            <FrameLayout android:layout_gravity="center" android:background="@drawable/circle_bg" android:layout_width="48.0dp" android:layout_height="48.0dp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_camera" />
            </FrameLayout>
            <TextView android:textColor="@color/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/camera" android:fontFamily="@font/san_regular" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llScreen" android:background="?selectableItemBackgroundBorderless" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0">
            <FrameLayout android:layout_gravity="center" android:background="@drawable/circle_bg" android:layout_width="48.0dp" android:layout_height="48.0dp">
                <ImageView android:layout_gravity="center" android:background="@drawable/ic_phone" android:padding="8.0dp" android:layout_width="24.0dp" android:layout_height="24.0dp" android:src="@drawable/ic_brightness" />
            </FrameLayout>
            <TextView android:textColor="@color/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/screen" android:fontFamily="@font/san_regular" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llMode" android:background="?selectableItemBackgroundBorderless" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0">
            <FrameLayout android:layout_gravity="center" android:background="@drawable/circle_bg" android:layout_width="48.0dp" android:layout_height="48.0dp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_flash" />
            </FrameLayout>
            <TextView android:textColor="@color/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/mode" android:fontFamily="@font/san_regular" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
